# aics-ml-segmentation

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  Documentation.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  build.gradle  run.sh  settings.gradle  setup.cfg  setup.py  tox.ini
.github/workflows/: build-docs.yml  build-main.yml  build-master.yml  publish.yml  test-and-lint.yml
aicsmlsegment/: Model.py  Model_dye.py  Model_probablistic.py  Model_qc.py  Model_qc2.py  __init__.py  aicsmlsegment_version.py  custom_loss.py  custom_metrics.py  fnet_prediction_torch.py  model_utils.py  monai_utils.py  multichannel_sliding_window.py  training_utils.py  utils.py  version.py
configs/: all_predict_options.yaml  all_train_options.yaml  baseline_full_train_config.yaml  baseline_testing_config.yaml  baseline_testing_config2.yaml  baseline_testing_config3.yaml  baseline_testing_config4.yaml  baseline_testing_config5.yaml  baseline_testing_config5_2.yaml  baseline_testing_config6.yaml  baseline_testing_probablistic_unet.yaml  baseline_train_probablistic_unet.yaml  baseline_training_config.yaml  baseline_training_config2.yaml  baseline_training_config3.yaml  baseline_training_config4.yaml  baseline_training_config5.yaml  monai_train_config.yaml  predict_file_config.yaml  predict_folder_config.yaml  train_config.yaml  unet_xy_zoom_0pad.yaml
docs/: Makefile  bb1.md  bb2.md  bb3.md  check_cuda.md  code_overview.md  conf.py  demo_1.md  demo_2.md  doc_pred_yaml.md  doc_train_yaml.md  index.rst  installation.rst  make.bat  overview.md
test/: __init__.py
(+44 files in other folders)
