[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --junitxml=build/test_report.xml -v
norecursedirs = aicsmlsegment/tests/checkouts .egg* build dist venv .gradle aicsmlsegment.egg-info/*

[flake8]
max-line-length = 130

[coverage:html]
directory = build/coverage_html
title = Test coverage report for aicsbatch

[coverage:xml]
output = build/coverage.xml
